--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "dva": "^2.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
